<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">



    <LinearLayout
        android:layout_width="fill_parent"
        android:orientation="vertical"
        android:id="@+id/profileMenu"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/option1"
            android:onClick="onClick"
            android:id="@+id/btnUPoption1" android:layout_gravity="left|center_vertical"/>
        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:onClick="onClick"
            android:text="@string/UPoption2"
            android:id="@+id/btnUPOption2"/>




    </LinearLayout>


<LinearLayout
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:id="@+id/whitelist"
    android:visibility="gone"
    android:layout_height="wrap_content">




            <TextView
                android:layout_gravity="left"
                android:layout_width="wrap_content"
                android:text="@string/UPoption1"
                android:layout_height="wrap_content" />





        <Switch
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textOn="@string/On"
            android:text="@string/Time"
            android:textOff="@string/Off"
            android:id="@+id/swTime" />


        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textOn="@string/On"
            android:layout_gravity="center"
            android:text="@string/Location"
            android:textOff="@string/Off"
            android:id="@+id/swLocation" />

        <Switch
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textOn="@string/On"
            android:text="@string/Content"
            android:textOff="@string/Off"
            android:id="@+id/swContent" />

        <Switch
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textOn="@string/On"
            android:text="@string/Battery"
            android:textOff="@string/Off"
            android:id="@+id/switch1" />
        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="Save Changes"
            android:id="@+id/btnConfigurationsSave" android:layout_gravity="left|center_vertical"/>
        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="Cancel"
            android:id="@+id/btnConfigurationsCancel"/>

</LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:orientation="vertical"
        android:visibility="gone"
        android:id="@+id/whatToDo"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:text="@string/UPoption2"
            android:layout_height="wrap_content" />



        <TextView
            android:layout_width="wrap_content"
            android:text="@string/NewItems"
            android:layout_height="wrap_content" />

        <ListView
            android:id="@+id/wlUpdates"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"></ListView>
        <LinearLayout
            android:layout_width="wrap_content"
            android:orientation="horizontal"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/saveNewServices"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="Save Changes"
                android:layout_gravity="left|center_vertical"/>
            <Button

                android:onClick="reset"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="Cancel" />

        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:text="@string/EditWLP"
            android:layout_height="wrap_content" />


        <ListView
            android:layout_width="wrap_content"
            android:id="@+id/wlList"
            android:layout_height="wrap_content"></ListView>
        <LinearLayout
            android:layout_width="wrap_content"
            android:orientation="horizontal"
            android:layout_height="wrap_content">
        <Button
            android:id="@+id/updateServices"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="Save Changes"
            android:layout_gravity="left|center_vertical"/>
        <Button
            android:onClick="reset"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="Cancel" />

        </LinearLayout>




    </LinearLayout>

</LinearLayout>